implemented community reviews component
