# src/server.js
@@ -12,6 +12,7 @@ const app = express();
 const routeRoutes = require('./routes/routeRoutes');
 
 const userRoutes = require('./routes/userRoutes');
+const reviewRoutes = require('./routes/reviewRoutes');
 
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
@@ -25,6 +26,7 @@ app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.use('/api/routes', routeRoutes);
 
 app.use('/api/users', userRoutes);
+app.use('/api/reviews', reviewRoutes);
 
 // Connect to MongoDB 
 // (Commented out until you add your real URI to the .env file)
